[package]
name = "libmctp"
description = "libMCTP is a MCTP (Management Component Transport Protocol) implementation for Rust"
repository = "https://github.com/westerndigitalcorporation/libmctp"
license = "MIT OR Apache-2.0"
version = "0.2.0"
authors = ["Alistair Francis <alistair.francis@wdc.com>"]
keywords = ["MCTP", "SMBus"]
categories = ["embedded", "encoding", "no-std", "parser-implementations", "parsing"]
edition = "2024"
readme = "README.md"
exclude = [
    ".git*",
]

[dependencies]
bitfield = "0.14"
smbus-pec = "1.0"
